--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <span>Programador</span></h1>
             <ul>
               <li class="ad">topacio 2716, La Paz B.C.S.</li>
-              <li class="mail">mixrey10@gmail.com</li>
+              <li class="mail">miguel_angeltr94@hotmail.com</li>
               <li class="tel">612 11 88 986</li>
               
             </ul>
